istio/samples/goods-grpc/goods-http/kubernetes/deployment.yml

# API version
apiVersion: apps/v1

# resource type
kind: Deployment

# metadata of the deployment
metadata:
  name: goods-http
  labels:
    app: goods-http
    version: v1

# specification
spec:
  # replica number to run
  replicas: 1

  selector:
    matchLabels:
      app: goods-http
      version: v1

  # using this template to create pod
  template:
    metadata:
      labels:
        app: goods-http
        version: v1

    spec:
      containers:
        - name: goods-http
          image: istio-test/goods-http:v1
          ports:
            - containerPort: 19996
      restartPolicy: Always

  ##########################################
  # More features and details, please visit 
  #     'https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.17/'
  # to get more information, this URL is for kubernetes v1.17 only
  ##########################################
