istio/samples/goods-grpc/goods-http/kubernetes/service.yml

# API version
apiVersion: v1

# resource type
kind: Service

# metadata of the service
metadata:
  name: goods-http 

# specification
spec:
  type: ClusterIP

  ports:
    - name: http
      port: 19996
      protocol: TCP
      targetPort: 19996

  selector:
    app: goods-http

  ##########################################
  # More features and details, please visit 
  #     'https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.17/'
  # to get more information, this URL is for kubernetes v1.17 only
  ##########################################
